# psycho

./: .gitignore  LICENSE  README.md  capacitor.config.json  ionic.config.json  package-lock.json  package.json  vite.config.mjs
.github/workflows/: mobile-build.yml
android/: gradle.properties
android/app/: build.gradle
android/app/src/main/java/com/xinchao/psycho/: MainActivity.java
android/app/src/main/res/values/: strings.xml
backend/: .env.example  README.md  pyproject.toml
backend/docs/: API.md
backend/examples/: xinchao-api-client.js
backend/src/psycho_backend/: __init__.py  __main__.py  api.py  companion_api.py  companion_llm.py  companion_prompts.py  companion_schemas.py  companion_service.py  config.py  errors.py  image_processing.py  llm.py  main.py  prompts.py  safety.py  schemas.py  service.py
backend/tests/: test_api.py  test_companion_api.py  test_config_and_schemas.py
prototype/: .env.example  BACKEND_CONTRACT.md  CUSTOM_API.md  DESIGN_PLAN_DEARAURA.md  README.md  REALTIME_ASR.md  TIDE_SYSTEM.md  api-client.js  app.js  asr-client.js  asr-pcm-worklet.js  audio-capture.js  index.html  main.js  profile-runtime.js  styles.css
prototype-v1/: README.md  app.js  index.html  styles.css
prototype/tests/: api-client.test.mjs  asr-client.test.mjs  audio-capture.test.mjs  profile-runtime.test.mjs
resources/: README.md
scripts/: android-mic-permissions.mjs
