[project]
name = "xinchao-profile-backend"
version = "0.1.0"
description = "心潮多模态心理画像 FastAPI 后端"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx[socks]>=0.28,<1",
  "openai>=2,<3",
  "pillow>=11,<13",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
xinchao-api = "psycho_backend.main:run"

[dependency-groups]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<2",
  "ruff>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psycho_backend"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"
